@@ -98,6 +98,7 @@ Special Notes:"+{SPECIAL_NOTES_MAGICAL}+{SPECIAL_NOTES_SLOW}
 		range=ranged
 		[animation]
 			[missile_frame]
+				offset=1.0
 				begin=-200
 				end=50
 				image="projectiles/entangle.png"
