@@ -62,6 +62,7 @@ Special Notes:"+{SPECIAL_NOTES_SLOW}+{SPECIAL_NOTES_HEALS}
 		range=ranged
 		[animation]
 			[missile_frame]
+				offset=1.0
 				begin=-250
 				end=0
 				image="projectiles/entangle.png"
