@@ -63,6 +63,7 @@ Special Notes:"+{SPECIAL_NOTES_SLOW}+{SPECIAL_NOTES_CURES}
 		icon=attacks/entangle.png
 		[animation]
 			[missile_frame]
+				offset=1.0
 				begin=-150
 				end=0
 				image="projectiles/entangle.png"
