@@ -43,6 +43,8 @@ Version 1.3-svn:
    * add progressive paramteters, allow to specify a value that will move
    continuously in an animation
    * alpha blending is our first progressive parameter
+   * new parameter in frames, offset. It allows to specify the position
+   relative to the faced hex
    * units can now have a recruit animation that will be played on unit
    recruit.
    * units now have idle animations when they arn't used for some time
